Fix horizontal scroll issue due to nav menu background element

--- a/css/src/_header.scss
+++ b/css/src/_header.scss
@@ -129,6 +129,8 @@
 	}
 
 	@include breakpoint(medium) {
+		overflow: hidden;
+
 		&,
 		.wrap.is-at-top {
 			background-color: $whiter;
